# yalp

./: .env.example  .gitignore  README.md  SETUP.md  build.py  index.html  pyproject.toml  requirements.txt
archive/: initial-plan.md
docs/: README.md  build.py  index.html
docs/archive/: initial-plan.md
docs/product/: product-spec.md  product-vision.md
docs/technical/: architecture.md  as-built-wiring.md  audio.md  hardware-runbook.md  hardware.md  next-session-handoff.md  pi-bringup.md  pi-validation-2026-07.md  roadmap.md  (+2 more)
product/: product-spec.md  product-vision.md
scripts/: agent_demo.py  contract_demo.py  magic_moment.py  pi_setup.sh  verify_gpio_stack.py
technical/: architecture.md  hardware.md  roadmap.md  software-spec.md
tests/: _import_isolation.py  conftest.py  test_agent.py  test_agent_follow_tail.py  test_agent_listen.py  test_agent_voice_stop.py  test_async_perception.py  test_audio_cli.py  test_audio_device.py  test_backend_conformance.py  test_bench_cli.py  test_calibration.py  test_camera.py  test_config_env.py  test_config_voice.py  test_contract.py  test_drive_cli.py  test_follow.py  test_follow_runner.py  test_gpiod_ultrasonic.py  test_hardware_config.py  test_hardware_interface.py  test_hwtest_cli.py  test_llm.py  test_microphone.py  test_motor_driver.py  test_person_detector.py  test_pi_setup_scripts.py  test_reactive_cli.py  test_real_backend.py  test_remote_backend.py  test_responder.py  test_smoke.py  test_stt.py  test_telemetry.py  test_ultrasonic.py  test_vision.py  test_voice.py  test_watchdog.py  test_wifi_degradation.py
(+43 files in other folders)
