[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yalp"
version = "0.1.0"
description = "A from-scratch hobby robot brain: a fast on-Pi reactive loop and a slow cloud deliberative loop (Claude VLM/LLM). Built laptop-first against a fake reactive backend."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "yalp" }]
keywords = ["robotics", "raspberry-pi", "vlm", "claude", "differential-drive"]

# Runtime dependencies. Keep in sync with requirements.txt.
dependencies = [
    "anthropic",
    "opencv-python",
    "pillow",
    "numpy",
    "python-dotenv",
]

[project.optional-dependencies]
dev = ["pytest"]
# Optional voice INPUT (microphone capture + speech-to-text). Kept out of the
# base dependencies so the core suite installs/runs with no audio stack:
#   sounddevice    -> live mic capture (PortAudio)
#   faster-whisper -> local on-CPU speech-to-text (CTranslate2)
voice = ["sounddevice", "faster-whisper"]
# Optional Raspberry Pi hardware drivers. NOT installed on Mac/dev machines.
# Install with: pip install yalp[pi]
pi = ["gpiozero", "lgpio"]

[project.scripts]
yalp = "yalp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
